parser.output
Terminals unused in grammar

    FRIEND
    NAMESPACE
    OVERRIDE
    THROW
    TRY
    USING
    VIRTUAL
    SCOPE_OP
    CATCH
    FINAL
    UNTIL


State 44 conflicts: 45 reduce/reduce
State 51 conflicts: 11 shift/reduce
State 53 conflicts: 3 shift/reduce
State 54 conflicts: 2 shift/reduce
State 55 conflicts: 2 shift/reduce
State 56 conflicts: 4 shift/reduce
State 57 conflicts: 2 shift/reduce
State 58 conflicts: 1 shift/reduce
State 59 conflicts: 1 shift/reduce
State 60 conflicts: 1 shift/reduce
State 61 conflicts: 1 shift/reduce
State 62 conflicts: 2 shift/reduce
State 97 conflicts: 3 shift/reduce
State 174 conflicts: 3 shift/reduce
State 176 conflicts: 2 shift/reduce
State 254 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: translation_unit

    2 translation_unit: external_declaration
    3                 | translation_unit external_declaration

    4 external_declaration: function_definition
    5                     | declaration
    6                     | expression_statement
    7                     | ';'

    8 function_definition: declaration_specifiers declarator compound_statement

    9 primary_expression: IDENTIFIER
   10                   | CONSTANT
   11                   | STRING_LITERAL
   12                   | CHAR_LITERAL
   13                   | BOOL_TRUE
   14                   | BOOL_FALSE
   15                   | '(' expression ')'
   16                   | lambda_expression

   17 postfix_expression: primary_expression
   18                   | postfix_expression '[' expression ']'
   19                   | postfix_expression '(' ')'
   20                   | postfix_expression '(' argument_expression_list ')'
   21                   | postfix_expression '.' IDENTIFIER
   22                   | postfix_expression PTR_OP IDENTIFIER
   23                   | postfix_expression INC_OP
   24                   | postfix_expression DEC_OP

   25 argument_expression_list: assignment_expression
   26                         | argument_expression_list ',' assignment_expression

   27 unary_expression: postfix_expression
   28                 | INC_OP unary_expression
   29                 | DEC_OP unary_expression
   30                 | '&' cast_expression
   31                 | '*' cast_expression
   32                 | '+' cast_expression
   33                 | '-' cast_expression
   34                 | '~' cast_expression
   35                 | '!' cast_expression
   36                 | SIZEOF unary_expression
   37                 | SIZEOF '(' type_name ')'
   38                 | new_expression
   39                 | delete_expression

   40 cast_expression: unary_expression
   41                | '(' type_name ')' cast_expression

   42 multiplicative_expression: cast_expression
   43                          | multiplicative_expression '*' cast_expression
   44                          | multiplicative_expression '/' cast_expression
   45                          | multiplicative_expression '%' cast_expression

   46 additive_expression: multiplicative_expression
   47                    | additive_expression '+' multiplicative_expression
   48                    | additive_expression '-' multiplicative_expression

   49 shift_expression: additive_expression
   50                 | shift_expression LSHIFT_OP additive_expression
   51                 | shift_expression RSHIFT_OP additive_expression

   52 relational_expression: shift_expression
   53                      | relational_expression '<' shift_expression
   54                      | relational_expression '>' shift_expression
   55                      | relational_expression LE_OP shift_expression
   56                      | relational_expression GE_OP shift_expression

   57 equality_expression: relational_expression
   58                    | equality_expression EQ_OP relational_expression
   59                    | equality_expression NE_OP relational_expression

   60 and_expression: equality_expression
   61               | and_expression '&' equality_expression

   62 exclusive_or_expression: and_expression
   63                        | exclusive_or_expression '^' and_expression

   64 inclusive_or_expression: exclusive_or_expression
   65                        | inclusive_or_expression '|' exclusive_or_expression

   66 logical_and_expression: inclusive_or_expression
   67                       | logical_and_expression LAND_OP inclusive_or_expression

   68 logical_or_expression: logical_and_expression
   69                      | logical_or_expression LOR_OP logical_and_expression

   70 conditional_expression: logical_or_expression
   71                       | logical_or_expression '?' expression ':' conditional_expression

   72 assignment_expression: conditional_expression
   73                      | unary_expression assignment_operator assignment_expression

   74 assignment_operator: '='
   75                    | MUL_ASSIGN
   76                    | DIV_ASSIGN
   77                    | MOD_ASSIGN
   78                    | ADD_ASSIGN
   79                    | SUB_ASSIGN
   80                    | LSHIFT_ASSIGN
   81                    | RSHIFT_ASSIGN
   82                    | AND_ASSIGN
   83                    | XOR_ASSIGN
   84                    | OR_ASSIGN

   85 expression: assignment_expression
   86           | expression ',' assignment_expression

   87 constant_expression: conditional_expression

   88 new_expression: NEW type_name '(' ')'
   89               | NEW type_name
   90               | NEW type_name initializer

   91 delete_expression: DELETE cast_expression

   92 lambda_expression: '[' ']' '(' ')' compound_statement

   93 statement: labeled_statement
   94          | compound_statement
   95          | expression_statement
   96          | selection_statement
   97          | iteration_statement
   98          | jump_statement

   99 labeled_statement: IDENTIFIER ':' statement
  100                  | CASE constant_expression ':' statement
  101                  | DEFAULT ':' statement

  102 compound_statement: '{' '}'
  103                   | '{' block_item_list '}'

  104 block_item_list: block_item
  105                | block_item_list block_item

  106 block_item: declaration
  107           | statement

  108 expression_statement: ';'
  109                     | expression ';'

  110 selection_statement: IF '(' expression ')' statement
  111                    | IF '(' expression ')' statement ELSE statement
  112                    | SWITCH '(' expression ')' statement

  113 iteration_statement: WHILE '(' expression ')' statement
  114                    | DO statement WHILE '(' expression ')' ';'
  115                    | FOR '(' expression_statement expression_statement ')' statement
  116                    | FOR '(' expression_statement expression_statement expression ')' statement
  117                    | FOR '(' declaration expression_statement ')' statement
  118                    | FOR '(' declaration expression_statement expression ')' statement

  119 jump_statement: GOTO IDENTIFIER ';'
  120               | CONTINUE ';'
  121               | BREAK ';'
  122               | RETURN ';'
  123               | RETURN expression ';'

  124 declaration: declaration_specifiers ';'
  125            | declaration_specifiers init_declarator_list ';'

  126 declaration_specifiers: declaration_specifier
  127                       | declaration_specifiers declaration_specifier

  128 declaration_specifier: storage_class_specifier
  129                      | type_specifier
  130                      | type_qualifier

  131 init_declarator_list: init_declarator
  132                     | init_declarator_list ',' init_declarator

  133 init_declarator: declarator
  134                | declarator '=' initializer

  135 storage_class_specifier: TYPEDEF
  136                        | EXTERN
  137                        | STATIC
  138                        | AUTO
  139                        | REGISTER

  140 type_specifier: VOID
  141               | CHAR
  142               | SHORT
  143               | INT
  144               | LONG
  145               | FLOAT
  146               | DOUBLE
  147               | SIGNED
  148               | UNSIGNED
  149               | BOOL
  150               | STRING
  151               | FILE_TYPE
  152               | struct_or_union_specifier
  153               | enum_specifier
  154               | class_specifier
  155               | TYPE_NAME

  156 type_qualifier: CONST
  157               | VOLATILE

  158 struct_or_union_specifier: STRUCT IDENTIFIER '{' struct_declaration_list '}'
  159                          | UNION IDENTIFIER '{' struct_declaration_list '}'
  160                          | STRUCT '{' struct_declaration_list '}'
  161                          | UNION '{' struct_declaration_list '}'
  162                          | STRUCT TYPE_NAME
  163                          | UNION TYPE_NAME

  164 struct_declaration_list: struct_declaration
  165                        | struct_declaration_list struct_declaration

  166 struct_declaration: declaration_specifiers struct_declarator_list ';'

  167 struct_declarator_list: struct_declarator
  168                       | struct_declarator_list ',' struct_declarator

  169 struct_declarator: declarator
  170                  | declarator ':' constant_expression

  171 enum_specifier: ENUM '{' enumerator_list '}'
  172               | ENUM IDENTIFIER '{' enumerator_list '}'
  173               | ENUM TYPE_NAME

  174 enumerator_list: enumerator
  175                | enumerator_list ',' enumerator

  176 enumerator: IDENTIFIER
  177           | IDENTIFIER '=' constant_expression

  178 class_specifier: CLASS class_name base_clause '{' class_member_list '}'

  179 class_name: IDENTIFIER

  180 base_clause: ε
  181            | ':' base_specifier
  182            | base_clause ',' base_specifier

  183 base_specifier: access_specifier class_name
  184               | class_name

  185 access_specifier: PUBLIC
  186                 | PRIVATE
  187                 | PROTECTED

  188 class_member_list: ε
  189                  | class_member_list class_member

  190 class_member: declaration
  191             | function_definition
  192             | access_specifier ':'

  193 declarator: pointer direct_declarator
  194           | direct_declarator

  195 direct_declarator: IDENTIFIER
  196                  | '(' declarator ')'
  197                  | direct_declarator '[' constant_expression ']'
  198                  | direct_declarator '[' ']'
  199                  | direct_declarator '(' parameter_type_list ')'
  200                  | direct_declarator '(' ')'

  201 pointer: '*' type_qualifier_list_opt
  202        | pointer '*' type_qualifier_list_opt

  203 type_qualifier_list_opt: ε
  204                        | type_qualifier_list

  205 type_qualifier_list: type_qualifier
  206                    | type_qualifier_list type_qualifier

  207 parameter_type_list: parameter_list
  208                    | parameter_list ',' ELLIPSIS

  209 parameter_list: parameter_declaration
  210               | parameter_list ',' parameter_declaration

  211 parameter_declaration: declaration_specifiers declarator
  212                      | declaration_specifiers abstract_declarator
  213                      | declaration_specifiers

  214 type_name: declaration_specifiers abstract_declarator
  215          | declaration_specifiers

  216 abstract_declarator: pointer
  217                    | pointer direct_abstract_declarator
  218                    | direct_abstract_declarator

  219 direct_abstract_declarator: '(' abstract_declarator ')'
  220                           | '[' ']'
  221                           | '[' constant_expression ']'
  222                           | direct_abstract_declarator '[' ']'
  223                           | direct_abstract_declarator '[' constant_expression ']'
  224                           | '(' ')'
  225                           | '(' parameter_type_list ')'
  226                           | direct_abstract_declarator '(' ')'
  227                           | direct_abstract_declarator '(' parameter_type_list ')'

  228 initializer: assignment_expression
  229            | '{' initializer_list '}'
  230            | '{' initializer_list ',' '}'

  231 initializer_list: initializer
  232                 | initializer_list ',' initializer


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 35
    '%' (37) 45
    '&' (38) 30 61
    '(' (40) 15 19 20 37 41 88 92 110 111 112 113 114 115 116 117 118 196 199 200 219 224 225 226 227
    ')' (41) 15 19 20 37 41 88 92 110 111 112 113 114 115 116 117 118 196 199 200 219 224 225 226 227
    '*' (42) 31 43 201 202
    '+' (43) 32 47
    ',' (44) 26 86 132 168 175 182 208 210 230 232
    '-' (45) 33 48
    '.' (46) 21
    '/' (47) 44
    ':' (58) 71 99 100 101 170 181 192
    ';' (59) 7 108 109 114 119 120 121 122 123 124 125 166
    '<' (60) 53
    '=' (61) 74 134 177
    '>' (62) 54
    '?' (63) 71
    '[' (91) 18 92 197 198 220 221 222 223
    ']' (93) 18 92 197 198 220 221 222 223
    '^' (94) 63
    '{' (123) 102 103 158 159 160 161 171 172 178 229 230
    '|' (124) 65
    '}' (125) 102 103 158 159 160 161 171 172 178 229 230
    '~' (126) 34
    error (256)
    IDENTIFIER <str> (258) 9 21 22 99 119 158 159 172 176 177 179 195
    CONSTANT <str> (259) 10
    STRING_LITERAL <str> (260) 11
    CHAR_LITERAL <str> (261) 12
    BOOL_TRUE <str> (262) 13
    BOOL_FALSE <str> (263) 14
    TYPE_NAME <str> (264) 155 162 163 173
    SIZEOF (265) 36 37
    PTR_OP (266) 22
    INC_OP (267) 23 28
    DEC_OP (268) 24 29
    LSHIFT_OP (269) 50
    RSHIFT_OP (270) 51
    LE_OP (271) 55
    GE_OP (272) 56
    EQ_OP (273) 58
    NE_OP (274) 59
    LAND_OP (275) 67
    LOR_OP (276) 69
    MUL_ASSIGN (277) 75
    DIV_ASSIGN (278) 76
    MOD_ASSIGN (279) 77
    ADD_ASSIGN (280) 78
    SUB_ASSIGN (281) 79
    LSHIFT_ASSIGN (282) 80
    RSHIFT_ASSIGN (283) 81
    AND_ASSIGN (284) 82
    XOR_ASSIGN (285) 83
    OR_ASSIGN (286) 84
    TYPEDEF (287) 135
    EXTERN (288) 136
    STATIC (289) 137
    AUTO (290) 138
    REGISTER (291) 139
    STRING (292) 150
    CHAR (293) 141
    SHORT (294) 142
    INT (295) 143
    LONG (296) 144
    SIGNED (297) 147
    UNSIGNED (298) 148
    FLOAT (299) 145
    DOUBLE (300) 146
    CONST (301) 156
    VOLATILE (302) 157
    VOID (303) 140
    BOOL (304) 149
    STRUCT (305) 158 160 162
    UNION (306) 159 161 163
    ENUM (307) 171 172 173
    ELLIPSIS (308) 208
    CASE (309) 100
    DEFAULT (310) 101
    IF (311) 110 111
    ELSE (312) 111
    SWITCH (313) 112
    WHILE (314) 113 114
    DO (315) 114
    FOR (316) 115 116 117 118
    GOTO (317) 119
    CONTINUE (318) 120
    BREAK (319) 121
    RETURN (320) 122 123
    CLASS (321) 178
    DELETE (322) 91
    FRIEND (323)
    NAMESPACE (324)
    NEW (325) 88 89 90
    OVERRIDE (326)
    PRIVATE (327) 186
    PROTECTED (328) 187
    PUBLIC (329) 185
    THROW (330)
    TRY (331)
    USING (332)
    VIRTUAL (333)
    SCOPE_OP (334)
    CATCH (335)
    FINAL (336)
    UNTIL (337)
    FILE_TYPE (338) 151


Nonterminals, with rules where they appear

    $accept (108)
        on left: 0
    program <node> (109)
        on left: 1
        on right: 0
    translation_unit <node> (110)
        on left: 2 3
        on right: 1 3
    external_declaration <node> (111)
        on left: 4 5 6 7
        on right: 2 3
    function_definition <node> (112)
        on left: 8
        on right: 4 191
    primary_expression <node> (113)
        on left: 9 10 11 12 13 14 15 16
        on right: 17
    postfix_expression <node> (114)
        on left: 17 18 19 20 21 22 23 24
        on right: 18 19 20 21 22 23 24 27
    argument_expression_list <list> (115)
        on left: 25 26
        on right: 20 26
    unary_expression <node> (116)
        on left: 27 28 29 30 31 32 33 34 35 36 37 38 39
        on right: 28 29 36 40 73
    cast_expression <node> (117)
        on left: 40 41
        on right: 30 31 32 33 34 35 41 42 43 44 45 91
    multiplicative_expression <node> (118)
        on left: 42 43 44 45
        on right: 43 44 45 46 47 48
    additive_expression <node> (119)
        on left: 46 47 48
        on right: 47 48 49 50 51
    shift_expression <node> (120)
        on left: 49 50 51
        on right: 50 51 52 53 54 55 56
    relational_expression <node> (121)
        on left: 52 53 54 55 56
        on right: 53 54 55 56 57 58 59
    equality_expression <node> (122)
        on left: 57 58 59
        on right: 58 59 60 61
    and_expression <node> (123)
        on left: 60 61
        on right: 61 62 63
    exclusive_or_expression <node> (124)
        on left: 62 63
        on right: 63 64 65
    inclusive_or_expression <node> (125)
        on left: 64 65
        on right: 65 66 67
    logical_and_expression <node> (126)
        on left: 66 67
        on right: 67 68 69
    logical_or_expression <node> (127)
        on left: 68 69
        on right: 69 70 71
    conditional_expression <node> (128)
        on left: 70 71
        on right: 71 72 87
    assignment_expression <node> (129)
        on left: 72 73
        on right: 25 26 73 85 86 228
    assignment_operator <token> (130)
        on left: 74 75 76 77 78 79 80 81 82 83 84
        on right: 73
    expression <node> (131)
        on left: 85 86
        on right: 15 18 71 86 109 110 111 112 113 114 116 118 123
    constant_expression <node> (132)
        on left: 87
        on right: 100 170 177 197 221 223
    new_expression <node> (133)
        on left: 88 89 90
        on right: 38
    delete_expression <node> (134)
        on left: 91
        on right: 39
    lambda_expression <node> (135)
        on left: 92
        on right: 16
    statement <node> (136)
        on left: 93 94 95 96 97 98
        on right: 99 100 101 107 110 111 112 113 114 115 116 117 118
    labeled_statement <node> (137)
        on left: 99 100 101
        on right: 93
    compound_statement <node> (138)
        on left: 102 103
        on right: 8 92 94
    block_item_list <list> (139)
        on left: 104 105
        on right: 103 105
    block_item <node> (140)
        on left: 106 107
        on right: 104 105
    expression_statement <node> (141)
        on left: 108 109
        on right: 6 95 115 116 117 118
    selection_statement <node> (142)
        on left: 110 111 112
        on right: 96
    iteration_statement <node> (143)
        on left: 113 114 115 116 117 118
        on right: 97
    jump_statement <node> (144)
        on left: 119 120 121 122 123
        on right: 98
    declaration <node> (145)
        on left: 124 125
        on right: 5 106 117 118 190
    declaration_specifiers <list> (146)
        on left: 126 127
        on right: 8 124 125 127 166 211 212 213 214 215
    declaration_specifier <node> (147)
        on left: 128 129 130
        on right: 126 127
    init_declarator_list <list> (148)
        on left: 131 132
        on right: 125 132
    init_declarator <node> (149)
        on left: 133 134
        on right: 131 132
    storage_class_specifier <node> (150)
        on left: 135 136 137 138 139
        on right: 128
    type_specifier <node> (151)
        on left: 140 141 142 143 144 145 146 147 148 149 150 151 152 153 154 155
        on right: 129
    type_qualifier <node> (152)
        on left: 156 157
        on right: 130 205 206
    struct_or_union_specifier <node> (153)
        on left: 158 159 160 161 162 163
        on right: 152
    struct_declaration_list <list> (154)
        on left: 164 165
        on right: 158 159 160 161 165
    struct_declaration <node> (155)
        on left: 166
        on right: 164 165
    struct_declarator_list <list> (156)
        on left: 167 168
        on right: 166 168
    struct_declarator <node> (157)
        on left: 169 170
        on right: 167 168
    enum_specifier <node> (158)
        on left: 171 172 173
        on right: 153
    enumerator_list <list> (159)
        on left: 174 175
        on right: 171 172 175
    enumerator <node> (160)
        on left: 176 177
        on right: 174 175
    class_specifier <node> (161)
        on left: 178
        on right: 154
    class_name <node> (162)
        on left: 179
        on right: 178 183 184
    base_clause <list> (163)
        on left: 180 181 182
        on right: 178 182
    base_specifier <node> (164)
        on left: 183 184
        on right: 181 182
    access_specifier <node> (165)
        on left: 185 186 187
        on right: 183 192
    class_member_list <list> (166)
        on left: 188 189
        on right: 178 189
    class_member <node> (167)
        on left: 190 191 192
        on right: 189
    declarator <node> (168)
        on left: 193 194
        on right: 8 133 134 169 170 196 211
    direct_declarator <node> (169)
        on left: 195 196 197 198 199 200
        on right: 193 194 197 198 199 200
    pointer <node> (170)
        on left: 201 202
        on right: 193 202 216 217
    type_qualifier_list_opt <list> (171)
        on left: 203 204
        on right: 201 202
    type_qualifier_list <list> (172)
        on left: 205 206
        on right: 204 206
    parameter_type_list <list> (173)
        on left: 207 208
        on right: 199 225 227
    parameter_list <list> (174)
        on left: 209 210
        on right: 207 208 210
    parameter_declaration <node> (175)
        on left: 211 212 213
        on right: 209 210
    type_name <node> (176)
        on left: 214 215
        on right: 37 41 88 89 90
    abstract_declarator <node> (177)
        on left: 216 217 218
        on right: 212 214 219
    direct_abstract_declarator <node> (178)
        on left: 219 220 221 222 223 224 225 226 227
        on right: 217 218 222 223 226 227
    initializer <node> (179)
        on left: 228 229 230
        on right: 90 134 231 232
    initializer_list <list> (180)
        on left: 231 232
        on right: 229 230 232


State 0

    0 $accept: • program $end

    IDENTIFIER      shift, and go to state 1
    CONSTANT        shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    CHAR_LITERAL    shift, and go to state 4
    BOOL_TRUE       shift, and go to state 5
    BOOL_FALSE      shift, and go to state 6
    TYPE_NAME       shift, and go to state 7
    SIZEOF          shift, and go to state 8
    INC_OP          shift, and go to state 9
    DEC_OP          shift, and go to state 10
    TYPEDEF         shift, and go to state 11
    EXTERN          shift, and go to state 12
    STATIC          shift, and go to state 13
    AUTO            shift, and go to state 14
    REGISTER        shift, and go to state 15
    STRING          shift, and go to state 16
    CHAR            shift, and go to state 17
    SHORT           shift, and go to state 18
    INT             shift, and go to state 19
    LONG            shift, and go to state 20
    SIGNED          shift, and go to state 21
    UNSIGNED        shift, and go to state 22
    FLOAT           shift, and go to state 23
    DOUBLE          shift, and go to state 24
    CONST           shift, and go to state 25
    VOLATILE        shift, and go to state 26
    VOID            shift, and go to state 27
    BOOL            shift, and go to state 28
    STRUCT          shift, and go to state 29
    UNION           shift, and go to state 30
    ENUM            shift, and go to state 31
    CLASS           shift, and go to state 32
    DELETE          shift, and go to state 33
    NEW             shift, and go to state 34
    FILE_TYPE       shift, and go to state 35
    '&'             shift, and go to state 36
    '+'             shift, and go to state 37
    '-'             shift, and go to state 38
    '*'             shift, and go to state 39
    '!'             shift, and go to state 40
    '~'             shift, and go to state 41
    '['             shift, and go to state 42
    '('             shift, and go to state 43
    ';'             shift, and go to state 44

    program                    go to state 45
    translation_unit           go to state 46
    external_declaration       go to state 47
    function_definition        go to state 48
    primary_expression         go to state 49
    postfix_expression         go to state 50
    unary_expression           go to state 51
    cast_expression            go to state 52
    multiplicative_expression  go to state 53
    additive_expression        go to state 54
    shift_expression           go to state 55
    relational_expression      go to state 56
    equality_expression        go to state 57
    and_expression             go to state 58
    exclusive_or_expression    go to state 59
    inclusive_or_expression    go to state 60
    logical_and_expression     go to state 61
    logical_or_expression      go to state 62
    conditional_expression     go to state 63
    assignment_expression      go to state 64
    expression                 go to state 65
    new_expression             go to state 66
    delete_expression          go to state 67
    lambda_expression          go to state 68
    expression_statement       go to state 69
    declaration                go to state 70
    declaration_specifiers     go to state 71
    declaration_specifier      go to state 72
    storage_class_specifier    go to state 73
    type_specifier             go to state 74
    type_qualifier             go to state 75
    struct_or_union_specifier  go to state 76
    enum_specifier             go to state 77
    class_specifier            go to state 78


State 1

    9 primary_expression: IDENTIFIER •

    $default  reduce using rule 9 (primary_expression)


State 2

   10 primary_expression: CONSTANT •

    $default  reduce using rule 10 (primary_expression)


State 3

   11 primary_expression: STRING_LITERAL •

    $default  reduce using rule 11 (primary_expression)


State 4

   12 primary_expression: CHAR_LITERAL •

    $default  reduce using rule 12 (primary_expression)


State 5

   13 primary_expression: BOOL_TRUE •

    $default  reduce using rule 13 (primary_expression)


State 6

   14 primary_expression: BOOL_FALSE •

    $default  reduce using rule 14 (primary_expression)


State 7

  155 type_specifier: TYPE_NAME •

    $default  reduce using rule 155 (type_specifier)


State 8

   36 unary_expression: SIZEOF • unary_expression
   37                 | SIZEOF • '(' type_name ')'

    IDENTIFIER      shift, and go to state 1
    CONSTANT        shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    CHAR_LITERAL    shift, and go to state 4
    BOOL_TRUE       shift, and go to state 5
    BOOL_FALSE      shift, and go to state 6
    SIZEOF          shift, and go to state 8
    INC_OP          shift, and go to state 9
    DEC_OP          shift, and go to state 10
    DELETE          shift, and go to state 33
    NEW             shift, and go to state 34
    '&'             shift, and go to state 36
    '+'             shift, and go to state 37
    '-'             shift, and go to state 38
    '*'             shift, and go to state 39
    '!'             shift, and go to state 40
    '~'             shift, and go to state 41
    '['             shift, and go to state 42
    '('             shift, and go to state 79

    primary_expression  go to state 49
    postfix_expression  go to state 50
    unary_expression    go to state 80
    new_expression      go to state 66
    delete_expression   go to state 67
    lambda_expression   go to state 68


State 9

   28 unary_expression: INC_OP • unary_expression

    IDENTIFIER      shift, and go to state 1
    CONSTANT        shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    CHAR_LITERAL    shift, and go to state 4
    BOOL_TRUE       shift, and go to state 5
    BOOL_FALSE      shift, and go to state 6
    SIZEOF          shift, and go to state 8
    INC_OP          shift, and go to state 9
    DEC_OP          shift, and go to state 10
    DELETE          shift, and go to state 33
    NEW             shift, and go to state 34
    '&'             shift, and go to state 36
    '+'             shift, and go to state 37
    '-'             shift, and go to state 38
    '*'             shift, and go to state 39
    '!'             shift, and go to state 40
    '~'             shift, and go to state 41
    '['             shift, and go to state 42
    '('             shift, and go to state 81

    primary_expression  go to state 49
    postfix_expression  go to state 50
    unary_expression    go to state 82
    new_expression      go to state 66
    delete_expression   go to state 67
    lambda_expression   go to state 68


State 10

   29 unary_expression: DEC_OP • unary_expression

    IDENTIFIER      shift, and go to state 1
    CONSTANT        shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    CHAR_LITERAL    shift, and go to state 4
    BOOL_TRUE       shift, and go to state 5
    BOOL_FALSE      shift, and go to state 6
    SIZEOF          shift, and go to state 8
    INC_OP          shift, and go to state 9
    DEC_OP          shift, and go to state 10
    DELETE          shift, and go to state 33
    NEW             shift, and go to state 34
    '&'             shift, and go to state 36
    '+'             shift, and go to state 37
    '-'             shift, and go to state 38
    '*'             shift, and go to state 39
    '!'             shift, and go to state 40
    '~'             shift, and go to state 41
    '['             shift, and go to state 42
    '('             shift, and go to state 81

    primary_expression  go to state 49
    postfix_expression  go to state 50
    unary_expression    go to state 83
    new_expression      go to state 66
    delete_expression   go to state 67
    lambda_expression   go to state 68


State 11

  135 storage_class_specifier: TYPEDEF •

    $default  reduce using rule 135 (storage_class_specifier)


State 12

  136 storage_class_specifier: EXTERN •

    $default  reduce using rule 136 (storage_class_specifier)


State 13

  137 storage_class_specifier: STATIC •

    $default  reduce using rule 137 (storage_class_specifier)


State 14

  138 storage_class_specifier: AUTO •

    $default  reduce using rule 138 (storage_class_specifier)


State 15

  139 storage_class_specifier: REGISTER •

    $default  reduce using rule 139 (storage_class_specifier)


State 16

  150 type_specifier: STRING •

    $default  reduce using rule 150 (type_specifier)


State 17

  141 type_specifier: CHAR •

    $default  reduce using rule 141 (type_specifier)


State 18

  142 type_specifier: SHORT •

    $default  reduce using rule 142 (type_specifier)


State 19

  143 type_specifier: INT •

    $default  reduce using rule 143 (type_specifier)


State 20

  144 type_specifier: LONG •

    $default  reduce using rule 144 (type_specifier)


State 21

  147 type_specifier: SIGNED •

    $default  reduce using rule 147 (type_specifier)


State 22

  148 type_specifier: UNSIGNED •

    $default  reduce using rule 148 (type_specifier)


State 23

  145 type_specifier: FLOAT •

    $default  reduce using rule 145 (type_specifier)


State 24

  146 type_specifier: DOUBLE •

    $default  reduce using rule 146 (type_specifier)


State 25

  156 type_qualifier: CONST •

    $default  reduce using rule 156 (type_qualifier)


State 26

  157 type_qualifier: VOLATILE •

    $default  reduce using rule 157 (type_qualifier)


State 27

  140 type_specifier: VOID •

    $default  reduce using rule 140 (type_specifier)


State 28

  149 type_specifier: BOOL •

    $default  reduce using rule 149 (type_specifier)


State 29

  158 struct_or_union_specifier: STRUCT • IDENTIFIER '{' struct_declaration_list '}'
  160                          | STRUCT • '{' struct_declaration_list '}'
  162                          | STRUCT • TYPE_NAME

    IDENTIFIER  shift, and go to state 84
    TYPE_NAME   shift, and go to state 85
    '{'         shift, and go to state 86


State 30

  159 struct_or_union_specifier: UNION • IDENTIFIER '{' struct_declaration_list '}'
  161                          | UNION • '{' struct_declaration_list '}'
  163                          | UNION • TYPE_NAME

    IDENTIFIER  shift, and go to state 87
    TYPE_NAME   shift, and go to state 88
    '{'         shift, and go to state 89


State 31

  171 enum_specifier: ENUM • '{' enumerator_list '}'
  172               | ENUM • IDENTIFIER '{' enumerator_list '}'
  173               | ENUM • TYPE_NAME

    IDENTIFIER  shift, and go to state 90
    TYPE_NAME   shift, and go to state 91
    '{'         shift, and go to state 92


State 32

  178 class_specifier: CLASS • class_name base_clause '{' class_member_list '}'

    IDENTIFIER  shift, and go to state 93

    class_name  go to state 94


State 33

   91 delete_expression: DELETE • cast_expression

    IDENTIFIER      shift, and go to state 1
    CONSTANT        shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    CHAR_LITERAL    shift, and go to state 4
    BOOL_TRUE       shift, and go to state 5
    BOOL_FALSE      shift, and go to state 6
    SIZEOF          shift, and go to state 8
    INC_OP          shift, and go to state 9
    DEC_OP          shift, and go to state 10
    DELETE          shift, and go to state 33
    NEW             shift, and go to state 34
    '&'             shift, and go to state 36
    '+'             shift, and go to state 37
    '-'             shift, and go to state 38
    '*'             shift, and go to state 39
    '!'             shift, and go to state 40
    '~'             shift, and go to state 41
    '['             shift, and go to state 42
    '('             shift, and go to state 43

    primary_expression  go to state 49
    postfix_expression  go to state 50
    unary_expression    go to state 95
    cast_expression     go to state 96
    new_expression      go to state 66
    delete_expression   go to state 67
    lambda_expression   go to state 68


State 34

   88 new_expression: NEW • type_name '(' ')'
   89               | NEW • type_name
   90               | NEW • type_name initializer

    TYPE_NAME  shift, and go to state 7
    TYPEDEF    shift, and go to state 11
    EXTERN     shift, and go to state 12
    STATIC     shift, and go to state 13
    AUTO       shift, and go to state 14
    REGISTER   shift, and go to state 15
    STRING     shift, and go to state 16
    CHAR       shift, and go to state 17
    SHORT      shift, and go to state 18
    INT        shift, and go to state 19
    LONG       shift, and go to state 20
    SIGNED     shift, and go to state 21
    UNSIGNED   shift, and go to state 22
    FLOAT      shift, and go to state 23
    DOUBLE     shift, and go to state 24
    CONST      shift, and go to state 25
    VOLATILE   shift, and go to state 26
    VOID       shift, and go to state 27
    BOOL       shift, and go to state 28
    STRUCT     shift, and go to state 29
    UNION      shift, and go to state 30
    ENUM       shift, and go to state 31
    CLASS      shift, and go to state 32
    FILE_TYPE  shift, and go to state 35

    declaration_specifiers     go to state 97
    declaration_specifier      go to state 72
    storage_class_specifier    go to state 73
    type_specifier             go to state 74
    type_qualifier             go to state 75
    struct_or_union_specifier  go to state 76
    enum_specifier             go to state 77
    class_specifier            go to state 78
    type_name                  go to state 98


State 35

  151 type_specifier: FILE_TYPE •

    $default  reduce using rule 151 (type_specifier)


State 36

   30 unary_expression: '&' • cast_expression

    IDENTIFIER      shift, and go to state 1
    CONSTANT        shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    CHAR_LITERAL    shift, and go to state 4
    BOOL_TRUE       shift, and go to state 5
    BOOL_FALSE      shift, and go to state 6
    SIZEOF          shift, and go to state 8
    INC_OP          shift, and go to state 9
    DEC_OP          shift, and go to state 10
    DELETE          shift, and go to state 33
    NEW             shift, and go to state 34
    '&'             shift, and go to state 36
    '+'             shift, and go to state 37
    '-'             shift, and go to state 38
    '*'             shift, and go to state 39
    '!'             shift, and go to state 40
    '~'             shift, and go to state 41
    '['             shift, and go to state 42
    '('             shift, and go to state 43

    primary_expression  go to state 49
    postfix_expression  go to state 50
    unary_expression    go to state 95
    cast_expression     go to state 99
    new_expression      go to state 66
    delete_expression   go to state 67
    lambda_expression   go to state 68


State 37

   32 unary_expression: '+' • cast_expression

    IDENTIFIER      shift, and go to state 1
    CONSTANT        shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    CHAR_LITERAL    shift, and go to state 4
    BOOL_TRUE       shift, and go to state 5
    BOOL_FALSE      shift, and go to state 6
    SIZEOF          shift, and go to state 8
    INC_OP          shift, and go to state 9
    DEC_OP          shift, and go to state 10
    DELETE          shift, and go to state 33
    NEW             shift, and go to state 34
    '&'             shift, and go to state 36
    '+'             shift, and go to state 37
    '-'             shift, and go to state 38
    '*'             shift, and go to state 39
    '!'             shift, and go to state 40
    '~'             shift, and go to state 41
    '['             shift, and go to state 42
    '('             shift, and go to state 43

    primary_expression  go to state 49
    postfix_expression  go to state 50
    unary_expression    go to state 95
    cast_expression     go to state 100
    new_expression      go to state 66
    delete_expression   go to state 67
    lambda_expression   go to state 68


State 38

   33 unary_expression: '-' • cast_expression
